--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ println(orz)</code></pre>
     <script type="module">
         import {Module} from './toy_lang/js/module.js';
 
-        function readModule(fileName) {
+        function read(fileName) {
             return fetch(fileName)
                         .then(resp => {
                             if(resp.ok) {
@@ -491,7 +491,7 @@ println(orz)</code></pre>
                 tty.textContent += value;
             },
             TOY_MODUEL_PATH,
-            readModule
+            read
         };
 
         Module.initialize(ENVIRONMENT)
