--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
     <hr>
     <h1>Playground</h1>
     <textarea id="code"># Is a language easier if 'Hello World' is easier?
+
+import '/lib/toy'
+
 println('Hello World')
 println('Hello {0}'.format('World'))
-println(String.format('Hello {0}', 'World'))</textarea>
+println(String.format('Hello {0}', 'World'))
+toy.hello()</textarea>
     <br>
     <br>
     <button id="run">Run It</button>
