add more examples link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ toy.hello()</textarea>
     <br>
     <textarea readonly="readonly" id="tty" style="background: #000;color:#fff;"></textarea>
     <hr>
-    <h1>Examples</h1>
+    <h1>Examples (<a href="https://github.com/JustinSDK/toy_lang/tree/master/toy_lang/examples">>More examples</a>)</h1>
     <ul>
         <li># Multiplication Table</li>
     </ul>
