keep environment module globally

--- a/index.html
+++ b/index.html
@@ -491,6 +491,9 @@ println(orz)</code></pre>
         
         const TOY_MODUEL_PATH = 'toy_lang';
         const ENVIRONMENT = {
+            input(message, defaultValue = '') {
+                return prompt(message, defaultValue);
+            },
             output(value) {
                 tty.textContent += value;
             },
