--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ toy.hello()</textarea>
     println()
 }
 
-range(1, 10).forEach(print_row)</code></pre>
+iterate(1, 10).forEach(print_row)</code></pre>
     <ul>
         <li># Tower of Hanoi</li>
     </ul>
